images changed, google analytics links added

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-139709019-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-139709019-1');
+</script>
+
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- <meta name="theme-color" content="#028fcc"/> -->
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -50,6 +60,8 @@
 	  }
 	}
 </script>
+
+
 	
 <!-- <meta name="google-site-verification" content="tj5-IRx0plSc-pKJrosM3LMwcN1rGrdcr0maVo3xJk0" /> -->
 <!-- Global site tag (gtag.js) - Google Ads: 780358687 -->
