--- a/news.html
+++ b/news.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-139709019-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-139709019-1');
+</script>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <link rel="manifest" href="/manifest.json">
@@ -129,8 +138,8 @@ ga('send', 'pageview'); -->
 				<h1>NEWS</h1>
 				<h3>OUR VIEW</h3>
 			</div>
-			<div class="TFMlogo_heading">
-					<img alt="TFM Group Logo" class="TFMLogo" src="images/TFMlogo.png">
+			<div class="TFMlogo_heading newsLogo">
+					<img alt="TFM Group Logo" class="TFMLogo" src="images/TFMblacklogo.png">
 			</div>
 			<div class="cookie-law">
 					<p>This website uses cookies to improve your experience. You can opt-out if you wish.</p>
@@ -154,7 +163,7 @@ ga('send', 'pageview'); -->
 				<div class="posts">
 					<div class="blogPosts">
 						<div class="profile">
-							<h3>Lauren Holliday</h3>
+							<h3>Andy Weedon</h3>
 							<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" class="linkedinBlack" src="images/social/black/linkedin.png" ></a>
 							<img alt="lauren profile picture" class="profileImg" src="images/lauren.jpg">
 						</div>
@@ -195,7 +204,7 @@ ga('send', 'pageview'); -->
 					</div>
 					<div class="blogPosts">
 						<div class="profile">
-								<h3>Bobby Light</h3>
+								<h3>Andy Weedon</h3>
 								<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" class="linkedinBlack" src="images/social/black/linkedin.png" ></a>
 								<img alt="Bobby profile picture" class="profileImg" src="images/jack.jpg">
 						</div>
@@ -221,11 +230,11 @@ ga('send', 'pageview'); -->
 		</section>
 
 		<section class="tutorials">
-			<h2>Make more sense of SD-WAN</h2>
+			<!-- <h2>Make more sense of SD-WAN</h2>
 			<p>View our guides <i class='fas fa-angle-right'></i></p>
 			<p>View our videos <i class='fas fa-angle-right'></i></p>
 			<p>Making sense starts here</p>
-			<h5>WATCH VIDEO <i class='fas fa-angle-right'></i></h5>
+			<h5>WATCH VIDEO <i class='fas fa-angle-right'></i></h5> -->
 			<div aria-hidden="true" class="greyTriangle"></div>
 		</section>
 
