--- a/about_us.html
+++ b/about_us.html
@@ -156,10 +156,11 @@ ga('send', 'pageview'); -->
 			<img alt="chat bubble to open chat window and start chatting with Aequos" class="chatbubble" onclick="openChat()" src="images/chatbubble.png">
 			<img alt="X that closes the text inviting to chat above chatbubble image" class="closeChat" src="images/closeChat.png">
 	</div>
-		<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=42894&appID=3drApNnnYaVm7PfrtccS"></iframe>
+		<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=55830&appID=GbE9uekoYZJoUSEjN0ac"></iframe>
 		<p aria-label="Close chat" role="button" class="close" onclick="closeChatX()"> X</p>
 
 		<section id="aboutUsVideo">
+			<h2>Learn about how a unified SD-WAN provides quality of experience, <br>from our partner <a rel="noopener" target="_blank" href="https://www.silver-peak.com/">Silver Peak.</a></h2>
 				<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe title="Optimise quality of IT experience using SD-WAN" src='https://www.youtube.com/embed/pw-YoWq6SwI' frameborder='0' allowfullscreen></iframe></div>
 		</section>
 
