--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   gtag('config', 'UA-139709019-1');
 </script>
-
+<link rel="canonical" href="https://aequos.co.uk">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <!-- <meta name="theme-color" content="#028fcc"/> -->
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -161,7 +161,7 @@ ga('send', 'pageview'); -->
 				<img alt="chat bubble to open chat window and start chatting with Aequos" class="chatbubble" onclick="openChat()" src="images/chatbubble.png">
 				<img alt="X that closes the text inviting to chat above chatbubble image" class="closeChat" src="images/closeChat.png">
 		</div>
-			<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=42894&appID=3drApNnnYaVm7PfrtccS"></iframe>
+			<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=55830&appID=GbE9uekoYZJoUSEjN0ac"></iframe>
 			<p aria-label="Close chat" role="button" class="close" onclick="closeChatX()"> X</p>
 		<section id="services_section">
 			
