--- a/news.html
+++ b/news.html
@@ -154,7 +154,7 @@ ga('send', 'pageview'); -->
 			<img alt="chat bubble to open chat window and start chatting with Aequos" class="chatbubble" onclick="openChat()" src="images/blackchatbubble.png">
 			<img alt="X that closes the text inviting to chat above chatbubble image" class="closeChat" src="images/closeChat.png">
 	</div>
-		<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=42894&appID=3drApNnnYaVm7PfrtccS"></iframe>
+		<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=55830&appID=GbE9uekoYZJoUSEjN0ac"></iframe>
 		<p aria-label="Close chat" role="button" class="close" onclick="closeChatX()"> X</p>
 
 		<section class="news">
@@ -165,7 +165,7 @@ ga('send', 'pageview'); -->
 						<div class="profile">
 							<h3>Andy Weedon</h3>
 							<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" class="linkedinBlack" src="images/social/black/linkedin.png" ></a>
-							<img alt="lauren profile picture" class="profileImg" src="images/lauren.jpg">
+							<img alt="Andy Weedon profile picture" class="profileImg" src="images/Andy.jpg">
 						</div>
 						<div class="blogContent">
 							<h3>LET'S GET GOING</h3>
@@ -185,9 +185,9 @@ ga('send', 'pageview'); -->
 					</div>
 					<div class="blogPosts">
 						<div class="profile">
-								<h3>Jack Smith</h3>
+								<h3>Andy Weedon</h3>
 								<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" class="linkedinBlack" src="images/social/black/linkedin.png" ></a>
-								<img alt="jack profile picture" class="profileImg" src="images/jack.jpg">
+								<!-- <img alt="jack profile picture" class="profileImg" src="images/Andy.jpg"> -->
 						</div>
 						<div class="blogContent">
 							<h3>Where are you coming from?</h3>
@@ -206,7 +206,7 @@ ga('send', 'pageview'); -->
 						<div class="profile">
 								<h3>Andy Weedon</h3>
 								<a rel="noopener" href="https://www.linkedin.com/company/aequos-sd-wan/" target="_blank"><img alt="Aequos SD-WAN LinkedIn" class="linkedinBlack" src="images/social/black/linkedin.png" ></a>
-								<img alt="Bobby profile picture" class="profileImg" src="images/jack.jpg">
+								<!-- <img alt="Bobby profile picture" class="profileImg" src="images/Andy.jpg"> -->
 						</div>
 						<div class="blogContent">
 							<h3>'Good enough' SD-WAN</h3>
