--- a/about_us.html
+++ b/about_us.html
@@ -16,8 +16,8 @@
 <meta name="theme-color" content="black">
 <meta name="description" content="AEQUOS are leaders implementing the SD-WAN technology that enables companies of all sizes and across all sectors to exploit digital transformation. AEQUOS is a forward-thinking company that works closely with customers and partners delivering the latest of technology solutions with networking expertise and an innovative approach." />
 <title>AEQUOS - ABOUT US</title>
-<link rel="stylesheet" href="css/style.css">
-<!-- <script src="prefixfree.js"></script> -->
+<link rel="stylesheet" href="css/min-style.css">
+<!-- <link rel="stylesheet" href="css/style.css"> -->
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
@@ -290,24 +290,9 @@ ga('send', 'pageview'); -->
 			</div>
 		</footer>
 
-
-			<!-- <link href="https://snatchbot.me/sdk/webchat.css" rel="stylesheet" type="text/css">
-			<script src="https://snatchbot.me/sdk/webchat.min.js"></script>
-			<script> Init("?botID=42894&appID=webchat", 600, 600, "https://dvgpba5hywmpo.cloudfront.net/media/image/skqauCIgqm7BAC7AdyLOpggUC", "rectangle", "#FFFFFF", 101, 50, 35, "", "1", "##ffffff", "#FFFFFF", 0); 
-			</script> -->                        
-
-	  
-
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="main.js"></script>
-	<!-- <script src="sw.js"></script> -->
-<!-- <script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/slick.min.js"></script>
-<script src="js/jquery.paroller.min.js"></script>
-<script src="js/jquery.custom.js"></script>
-<script src="js/swiper.min.js"></script>
-<script src="js/swiper.custom.js"></script> -->
-<!-- <script src="js/menu.js"></script> -->
+	<!-- <script src="main.js"></script> -->
+	<script src="min-main.js"></script>
 	<script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
 
 </body>
