--- a/contact-us.html
+++ b/contact-us.html
@@ -16,8 +16,8 @@
 <meta name="theme-color" content="black">
 <meta name="description" content="AEQUOS aspires to create meaningful relationships with partners so that the right solution can be found for business needs. Get in touch today for more information." />
 <title>AEQUOS - CONTACT US</title>
-<link rel="stylesheet" href="css/style.css">
-<!-- <script src="prefixfree.js"></script> -->
+<!-- <link rel="stylesheet" href="css/style.css"> -->
+<link rel="stylesheet" href="css/min-style.css">
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
@@ -58,54 +58,10 @@
 	  }
 	}
 </script>
-	
-<!-- <meta name="google-site-verification" content="tj5-IRx0plSc-pKJrosM3LMwcN1rGrdcr0maVo3xJk0" /> -->
-<!-- Global site tag (gtag.js) - Google Ads: 780358687 -->
-
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-780358687"></script> -->
-
-<!-- <script>
-  
-window.dataLayer = window.dataLayer || [];
-  
-function gtag(){dataLayer.push(arguments);}
-  
-gtag('js', new Date());
-
-  
-gtag('config', 'AW-780358687');
-
-</script> -->
-
-
-
-<!-- Event snippet for Aequos-con conversion page -->
-<!-- <script>
-  gtag('event', 'conversion', {
-      'send_to': 'AW-780358687/6R2wCJ6r748BEJ-ojfQC',
-      'value': 1.0,
-      'currency': 'USD'
-  });
-</script> -->
-<!-- <script>
-(function(i,s,o,g,r,a,m){
-  i['GoogleAnalyticsObject']=r;
-  i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},
-  i[r].l=1*new Date();
-  a=s.createElement(o),m=s.getElementsByTagName(o)[0];
-  a.async=1;
-  a.src=g;
-  m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-129560928-1', 'auto');
-ga('send', 'pageview'); -->
-<!-- </script> -->
 </head>
 <body>
 	<header class="header">
 		<div class="header_content">
-			<!-- <div class="header_logo-title"><a href="index.html"><img class="image-full" src="images/Logo-Aequos.png" alt="Aequos"><img class="image-sticky" src="images/Logo-Aequos-sticky.png" alt="Aequos-Logo"></a></div> -->
 			<nav tabindex="0" class="header_menu" role="navigation" aria-label="Mobile Navigation Dropdown">
 				<div id="header_name">
 					<h3>AEQUOS</h3>
@@ -152,8 +108,6 @@ ga('send', 'pageview'); -->
 		<iframe title="Aequos chatbot" class="bot" src="https://snatchbot.me/webchat/?botID=55830&appID=GbE9uekoYZJoUSEjN0ac"></iframe>
 		<p aria-label="Close chat" role="button" class="close" onclick="closeChatX()"> X</p>
 
-	
-	
 	<!-- Section features -->
 	<section class="contact-uspage" id="morefeatures">
 			<div aria-hidden="true" class="blackTriangle"></div>
@@ -356,7 +310,8 @@ ga('send', 'pageview'); -->
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="main.js"></script>
+<!-- <script src="main.js"></script> -->
+<script src="min-main.js"></script>
 <!-- <script src="sw.js"></script> -->
 <script type="text/javascript" src="jquery.validate.min.js"></script>
 
@@ -451,8 +406,6 @@ jQuery().ready(function() {
 			});
 			});
 	</script>
-	
-
 
 </body>
 </html>
