--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -16,8 +16,8 @@
 <meta name="theme-color" content="black">
 <meta name="description" content="AEQUOS is the UK's Leading Software-Defined Wide Area Network Provider. For the better user experience AEQUOS has implemented the use of cookies with a set of rules and policy to ensure that the data collected is fairly used." />
 <title>AEQUOS - PRIVACY POLICY</title>
-<link rel="stylesheet" href="css/style.css">
-<!-- <script src="prefixfree.js"></script> -->
+<!-- <link rel="stylesheet" href="css/style.css"> -->
+<link rel="stylesheet" href="css/min-style.css">
 <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400" rel="stylesheet">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
 
@@ -58,54 +58,11 @@
 	  }
 	}
 	</script>
-	
-<!-- <meta name="google-site-verification" content="tj5-IRx0plSc-pKJrosM3LMwcN1rGrdcr0maVo3xJk0" /> -->
-<!-- Global site tag (gtag.js) - Google Ads: 780358687 -->
 
-<!-- <script async src="https://www.googletagmanager.com/gtag/js?id=AW-780358687"></script> -->
-
-<!-- <script>
-  
-window.dataLayer = window.dataLayer || [];
-  
-function gtag(){dataLayer.push(arguments);}
-  
-gtag('js', new Date());
-
-  
-gtag('config', 'AW-780358687');
-
-</script> -->
-
-
-
-<!-- Event snippet for Aequos-con conversion page -->
-<!-- <script>
-  gtag('event', 'conversion', {
-      'send_to': 'AW-780358687/6R2wCJ6r748BEJ-ojfQC',
-      'value': 1.0,
-      'currency': 'USD'
-  });
-</script> -->
-<!-- <script>
-(function(i,s,o,g,r,a,m){
-  i['GoogleAnalyticsObject']=r;
-  i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},
-  i[r].l=1*new Date();
-  a=s.createElement(o),m=s.getElementsByTagName(o)[0];
-  a.async=1;
-  a.src=g;
-  m.parentNode.insertBefore(a,m)
-})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-ga('create', 'UA-129560928-1', 'auto');
-ga('send', 'pageview'); -->
-<!-- </script> -->
 </head>
 <body>
 	<header class="header">
 		<div class="header_content">
-			<!-- <div class="header_logo-title"><a href="index.html"><img class="image-full" src="images/Logo-Aequos.png" alt="Aequos"><img class="image-sticky" src="images/Logo-Aequos-sticky.png" alt="Aequos-Logo"></a></div> -->
 			<nav tabindex="0" class="header_menu" role="navigation" aria-label="Mobile Navigation Dropdown">
 				<div id="header_name">
 					<h3>AEQUOS</h3>
@@ -284,24 +241,9 @@ ga('send', 'pageview'); -->
 	</div>
 </footer>
 
-
-	<!-- <link href="https://snatchbot.me/sdk/webchat.css" rel="stylesheet" type="text/css">
-	<script src="https://snatchbot.me/sdk/webchat.min.js"></script>
-	<script> Init("?botID=42894&appID=webchat", 600, 600, "https://dvgpba5hywmpo.cloudfront.net/media/image/skqauCIgqm7BAC7AdyLOpggUC", "rectangle", "#FFFFFF", 101, 50, 35, "", "1", "##ffffff", "#FFFFFF", 0); 
-	</script> -->                        
-
-
-
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="main.js"></script>
-<!-- <script src="sw.js"></script> -->
-<!-- <script src="js/jquery-3.3.1.min.js"></script>
-<script src="js/slick.min.js"></script>
-<script src="js/jquery.paroller.min.js"></script>
-<script src="js/jquery.custom.js"></script>
-<script src="js/swiper.min.js"></script>
-<script src="js/swiper.custom.js"></script> -->
-<!-- <script src="js/menu.js"></script> -->
+<!-- <script src="main.js"></script> -->
+<script src="min-main.js"></script>
 <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
 
 </body>
