--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -212,7 +212,7 @@ ga('send', 'pageview'); -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<!-- <script src="main.js"></script> -->
 	<script src="min-main.js"></script>
-	<script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script>
+	<!-- <script type="text/javascript" src="https://cdn.ywxi.net/js/1.js" async></script> -->
 
 </body>
 </html>
